<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.SingInFragment">

    <TextView
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_text" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CoffeStyleFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/btn_fields"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_email_hint_text"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/btn_fields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_field" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CoffeStyleFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/btn_fields" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sing_in"
        style="@style/BtnSingInSingOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_in_text_btn" />

    <TextView
        style="@style/TextRegistery"
        android:id="@+id/toRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_to_registration"
        />

</androidx.appcompat.widget.LinearLayoutCompat>